UserInteractionPort replaces direct call of UserInterfaceFacade